--- a/src/Views/CreateTag.axaml
+++ b/src/Views/CreateTag.axaml
@@ -12,7 +12,7 @@
   <StackPanel Orientation="Vertical" Margin="8,0,0,0">
     <TextBlock FontSize="18"
                Classes="bold"
-               Text="{DynamicResource Text.CreateTag}"/>
+               Text="{DynamicResource Text.CreateTag.Title}"/>
     <Grid Margin="0,16,8,0" RowDefinitions="32,32,32,Auto,Auto,32" ColumnDefinitions="120,*">
       <TextBlock Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
