--- a/src/Views/CreateTag.axaml
+++ b/src/Views/CreateTag.axaml
@@ -46,6 +46,7 @@
                VerticalAlignment="Center"
                CornerRadius="2"
                Text="{Binding TagName, Mode=TwoWay}"
+               Watermark="{DynamicResource Text.CreateTag.Name.Placeholder}"
                v:AutoFocusBehaviour.IsEnabled="True"/>
 
       <TextBlock Grid.Row="2" Grid.Column="0"
